--- a/index.html
+++ b/index.html
@@ -89,11 +89,15 @@
                 <h2 class="section-title-work">Чем мы занимаемся</h2>
                 <ul class="work-list list">
                     <li class="work-img"><img src="./images/box-one.jpg" alt="work place IT" width="370" height="294">
+                        <p class="text-img">Десктопные приложения</p>
                     </li>
                     <li class="work-img"><img src="./images/box-two.jpg" alt="notebook and phone" width="370"
                             height="294">
+                        <p class="text-img">Мобильные приложения</p>
                     </li>
-                    <li class="work-img"><img src="./images/box-three.jpg" alt="planshet" width="370" height="294"></li>
+                    <li class="work-img"><img src="./images/box-three.jpg" alt="planshet" width="370" height="294">
+                        <p class="text-img">Дизайнерские решения</p>
+                    </li>
                 </ul>
             </div>
         </section>
