--- a/portfolio.html
+++ b/portfolio.html
@@ -58,13 +58,19 @@
                 <!--list proposition-->
                 <ul class="flax-cards">
                     <li class="cards-product">
-                        <a href="" class="card-container">
-                            <img src="./images/img-notebok.jpg" alt="notebook" width="370" height="294" />
-                            <div class="botton-part-cards">
-                                <h2 class="cards-product-title">Технокряк</h2>
-                                <p class="cards-product-text">Веб-сайт</p>
-                            </div>
-                        </a>
+                        <div class="overlay text-overlay-card">
+                            <a href="" class="card-container">
+                                <img src="./images/img-notebok.jpg" alt="notebook" width="370" height="294" />
+                                <!-- <p class="text-overlay-card">Технокряк это современная площадка распространения коронавируса.
+                                Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                конкурентов.
+                            </p> -->
+                                <div class="botton-part-cards">
+                                    <h2 class="cards-product-title">Технокряк</h2>
+                                    <p class="cards-product-text">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
