--- a/portfolio.html
+++ b/portfolio.html
@@ -58,23 +58,24 @@
                 <!--list proposition-->
                 <ul class="flax-cards">
                     <li class="cards-product">
-                        <div class="overlay text-overlay-card">
-                            <a href="" class="card-container">
+                        <a href="" class="card-container">
+                            <div class="overlay">
                                 <img src="./images/img-notebok.jpg" alt="notebook" width="370" height="294" />
-                                <!-- <p class="text-overlay-card">Технокряк это современная площадка распространения коронавируса.
-                                Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера
-                                конкурентов.
-                            </p> -->
-                                <div class="botton-part-cards">
-                                    <h2 class="cards-product-title">Технокряк</h2>
-                                    <p class="cards-product-text">Веб-сайт</p>
-                                </div>
-                            </a>
-                        </div>
+                                <p class="text-overlay-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="botton-part-cards">
+                                <h2 class="cards-product-title">Технокряк</h2>
+                                <p class="cards-product-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-desine.jpg" alt="mens play basketball" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-desine.jpg" alt="mens play basketball" width="370"
+                                    height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="cards-product-text">Дизайн</p>
@@ -83,7 +84,10 @@
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-restaurant.jpg" alt="shark" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-restaurant.jpg" alt="shark" width="370" height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Ресторан Seafood</h2>
                                 <p class="cards-product-text">Приложение</p>
@@ -92,7 +96,10 @@
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-airpods.jpg" alt="airpods" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-airpods.jpg" alt="airpods" width="370" height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Проект Prime</h2>
                                 <p class="cards-product-text">Маркетинг</p>
@@ -101,7 +108,10 @@
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-boxes.jpg" alt="two boxes" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-boxes.jpg" alt="two boxes" width="370" height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Проект Boxes</h2>
                                 <p class="cards-product-text">Приложение</p>
@@ -110,7 +120,10 @@
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-monitor.jpg" alt="monitor" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-monitor.jpg" alt="monitor" width="370" height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Inspiration has no Borders</h2>
                                 <p class="cards-product-text">Веб-сайт</p>
@@ -119,7 +132,10 @@
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-magazine.jpg" alt="magazine" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-magazine.jpg" alt="magazine" width="370" height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Издание Limited Edition</h2>
                                 <p class="cards-product-text">Дизайн</p>
@@ -128,7 +144,10 @@
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-label.jpg" alt="label" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-label.jpg" alt="label" width="370" height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Проект LAB</h2>
                                 <p class="cards-product-text">Маркетинг</p>
@@ -137,7 +156,10 @@
                     </li>
                     <li class="cards-product">
                         <a href="" class="card-container">
-                            <img src="./images/img-notebok-grey.jpg" alt="notebook" width="370" height="294" />
+                            <div class="overlay">
+                                <img src="./images/img-notebok-grey.jpg" alt="notebook" width="370" height="294" />
+                                <p class="text-overlay-card"></p>
+                            </div>
                             <div class="botton-part-cards">
                                 <h2 class="cards-product-title">Growing Business</h2>
                                 <p class="cards-product-text">Приложение</p>
