--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="hero hero-image">
             <div class="container">
                 <h1>Эффективные решения <br> для вашего бизнеса</h1>
-                <button class="button" type="button">Заказать услугу</button>
+                <button data-modal-open class="button" type="button">Заказать услугу</button>
             </div>
         </section>
 
@@ -281,6 +281,17 @@
             </div>
         </div>
     </footer>
+    <!--========MODAL WINDOW=========-->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal-window">
+            <button data-modal-close class="closed" type="button"  href=""><svg class="botton-closed">
+                    <use href="./images/symbol-defs.svg#icon-vector"></use>
+                </svg></button>
+        </div>
+    </div>
+    <!--========END MODAL WINDOW=========-->
+    <!--JS-->
+    <script src="./JS/modal.js"></script>
 </body>
 
 </html>
