--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <!--========MODAL WINDOW=========-->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal-window">
-            <button data-modal-close class="closed" type="button"  href=""><svg class="botton-closed">
+            <button data-modal-close class="closed" type="button"><svg class="botton-closed">
                     <use href="./images/symbol-defs.svg#icon-vector"></use>
                 </svg></button>
         </div>
