--- a/index.html
+++ b/index.html
@@ -89,14 +89,20 @@
                 <h2 class="section-title-work">Чем мы занимаемся</h2>
                 <ul class="work-list list">
                     <li class="work-img"><img src="./images/box-one.jpg" alt="work place IT" width="370" height="294">
-                        <p class="text-img">Десктопные приложения</p>
+                        <div class="box-text">
+                            <h3 class="text-img">Десктопные приложения</h3>
+                        </div>
                     </li>
                     <li class="work-img"><img src="./images/box-two.jpg" alt="notebook and phone" width="370"
                             height="294">
-                        <p class="text-img">Мобильные приложения</p>
+                        <div class="box-text">
+                            <h3 class="text-img">Мобильные приложения</h3>
+                        </div>
                     </li>
                     <li class="work-img"><img src="./images/box-three.jpg" alt="planshet" width="370" height="294">
-                        <p class="text-img">Дизайнерские решения</p>
+                        <div class="box-text">
+                            <h3 class="text-img">Дизайнерские решения</h3>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -261,20 +267,16 @@
             <div class="footer-social-block">
                 <p class="social-block-title">присоединяйтесь</p>
                 <ul class="social-list list">
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
                             </svg></a></li>
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
                             </svg></a></li>
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
                             </svg></a></li>
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                             </svg></a></li>
                 </ul>
