--- a/portfolio.html
+++ b/portfolio.html
@@ -187,20 +187,16 @@
             <div class="footer-social-block">
                 <p class="social-block-title">присоединяйтесь</p>
                 <ul class="social-list list">
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
                             </svg></a></li>
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
                             </svg></a></li>
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
                             </svg></a></li>
-                    <li><a class="footer-social-list" href=""><svg class="footer-social-icon" width="20px"
-                                height="20px">
+                    <li><a class="footer-social-list" href=""><svg width="20px" height="20px">
                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                             </svg></a></li>
                 </ul>
